--- a/heuristiskenhed.html
+++ b/heuristiskenhed.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/css/custom.css" />
-    <title>Heuristisk Enhed - IT-Komponent - Daisy RA</title>
+    <title>Heuristisk Enhed - IT-System - Daisy RA</title>
   </head>
 
   <body class="bg-light">
@@ -69,10 +69,12 @@
               <span class="badge badge-info badge-pill mt-2 mb-4"
                 >Heuristisk Enhed</span
               >
-              <h1 class="font-weight-bold">Kredsaflytningssystem</h1>
-              <h3 class="text-secondary mb-5">
-                Indenrigsministeriet, 1950 - 1975
+              <h3 class="text-secondary">
+                Frederiksberg Politi
               </h3>
+              <h1 class="font-weight-bold mb-5">
+                Kredsaflytningssystem, 1950 - 1975
+              </h1>
 
               <div class="container-fluid">
                 <div class="row mb-3 mt-3">
@@ -122,7 +124,7 @@
                                   Type
                                 </div>
                                 <div class="col-sm-6 readonly">
-                                  IT-Komponent
+                                  IT-System
                                 </div>
                                 <div class="col-sm-6 write">
                                   <div class="form-group mb-0">
@@ -130,8 +132,8 @@
                                       class="form-control"
                                       id="exampleFormControlSelect1"
                                     >
-                                      <option>IT-Komponent</option>
-                                      <option>2</option>
+                                      <option>IT-System</option>
+                                      <option>Papir</option>
                                       <option>3</option>
                                       <option>4</option>
                                       <option>5</option>
@@ -145,7 +147,9 @@
                                 <div class="col-sm-6 font-weight-semibold">
                                   Undertype
                                 </div>
-                                <div class="col-sm-6 readonly">Type2</div>
+                                <div class="col-sm-6 readonly">
+                                  IT-System uden dokumenter
+                                </div>
                                 <div class="col-sm-6 write">
                                   <div class="form-group mb-0">
                                     <select
@@ -254,7 +258,7 @@
                                   E-nr.
                                 </div>
                                 <div class="col-sm-6 readonly">
-                                  2149xiu12oi3u
+                                  1353:E087
                                 </div>
                                 <div class="col-sm-6 write">
                                   <div class="form-group mb-0">
@@ -311,7 +315,7 @@
                                 <tbody>
                                   <tr class="readonly">
                                     <td>
-                                      FRB Politi
+                                      Kredsaflytningssystem
                                     </td>
                                     <td>Officielt</td>
                                     <td width="25" class="text-right">
@@ -348,9 +352,9 @@
                                   </tr>
                                   <tr class="readonly">
                                     <td>
-                                      FRB Politi
+                                      Områdesystem
                                     </td>
-                                    <td>Officielt</td>
+                                    <td>Kaldenavn</td>
                                     <td width="25" class="text-right">
                                       <a href="#" class="edit icon">
                                         <svg
@@ -659,7 +663,9 @@
                                 <tbody>
                                   <tr class="readonly">
                                     <td>
-                                      <a href="/arkivskaber.html">KBH Politi</a>
+                                      <a href="/arkivskaber.html"
+                                        >Frederiksberg Politi</a
+                                      >
                                     </td>
                                     <td>1920</td>
                                     <td>1988</td>
@@ -1129,7 +1135,7 @@ of Lorem Ipsum.
                                     <input
                                       type="text"
                                       class="form-control"
-                                      value="Sh29123"
+                                      value="12.05.2019"
                                     />
                                   </div>
                                 </div>
@@ -1140,14 +1146,14 @@ of Lorem Ipsum.
                                 <div class="col-sm-6 font-weight-semibold">
                                   Afleveringsfrekvens
                                 </div>
-                                <div class="col-sm-6 readonly">Type2</div>
+                                <div class="col-sm-6 readonly">5</div>
                                 <div class="col-sm-6 write">
                                   <div class="form-group mb-0">
                                     <select
                                       class="form-control"
                                       id="exampleFormControlSelect1"
                                     >
-                                      <option>Type2</option>
+                                      <option>1</option>
                                       <option>2</option>
                                       <option>3</option>
                                       <option>4</option>
@@ -1162,13 +1168,13 @@ of Lorem Ipsum.
                                 <div class="col-sm-6 font-weight-semibold">
                                   Beslutningstatus
                                 </div>
-                                <div class="col-sm-6 readonly">Ja</div>
+                                <div class="col-sm-6 readonly">Bevares</div>
                                 <div class="col-sm-6 write">
                                   <div class="form-group mb-0">
                                     <input
                                       type="text"
                                       class="form-control"
-                                      value="Sh29123"
+                                      value="Bevares"
                                     />
                                   </div>
                                 </div>
@@ -1180,7 +1186,7 @@ of Lorem Ipsum.
                                   Afleveringsmodel
                                 </div>
                                 <div class="col-sm-6 readonly">
-                                  2. niveau
+                                  Model 1
                                 </div>
                                 <div class="col-sm-6 write">
                                   <div class="form-group mb-0">
@@ -1188,11 +1194,11 @@ of Lorem Ipsum.
                                       class="form-control"
                                       id="exampleFormControlSelect1"
                                     >
-                                      <option>2. niveau</option>
-                                      <option>2</option>
-                                      <option>3</option>
-                                      <option>4</option>
-                                      <option>5</option>
+                                      <option>Model 1</option>
+                                      <option>Model 2</option>
+                                      <option>Model 3</option>
+                                      <option>Model 4</option>
+                                      <option>Model 5</option>
                                     </select>
                                   </div>
                                 </div>
@@ -1207,15 +1213,13 @@ of Lorem Ipsum.
                                 <div class="col-sm-6 font-weight-semibold">
                                   Sletningsfrist
                                 </div>
-                                <div class="col-sm-6 readonly">
-                                  14.06.2018
-                                </div>
+                                <div class="col-sm-6 readonly"></div>
                                 <div class="col-sm-6 write">
                                   <div class="form-group mb-0">
                                     <input
                                       type="text"
                                       class="form-control"
-                                      value="Sh29123"
+                                      value=""
                                     />
                                   </div>
                                 </div>
@@ -1226,15 +1230,13 @@ of Lorem Ipsum.
                                 <div class="col-sm-6 font-weight-semibold">
                                   Sletningsperiode
                                 </div>
-                                <div class="col-sm-6 readonly">
-                                  Januar
-                                </div>
+                                <div class="col-sm-6 readonly"></div>
                                 <div class="col-sm-6 write">
                                   <div class="form-group mb-0">
                                     <input
                                       type="text"
                                       class="form-control"
-                                      value="2149xiu12oi3u"
+                                      value=""
                                     />
                                   </div>
                                 </div>
@@ -1245,15 +1247,13 @@ of Lorem Ipsum.
                                 <div class="col-sm-6 font-weight-semibold">
                                   Afleveres til
                                 </div>
-                                <div class="col-sm-6 readonly">
-                                  SA
-                                </div>
+                                <div class="col-sm-6 readonly"></div>
                                 <div class="col-sm-6 write">
                                   <div class="form-group mb-0">
                                     <input
                                       type="text"
                                       class="form-control"
-                                      value="2149xiu12oi3u"
+                                      value=""
                                     />
                                   </div>
                                 </div>
@@ -1265,7 +1265,7 @@ of Lorem Ipsum.
                                   System nedlagt
                                 </div>
                                 <div class="col-sm-6 readonly">
-                                  Ja
+                                  Nej
                                 </div>
                                 <div class="col-sm-6 write">
                                   <div
@@ -1277,7 +1277,6 @@ of Lorem Ipsum.
                                       name="SystemRadios"
                                       id="SystemRadios1"
                                       value="option1"
-                                      checked
                                     />
                                     <label
                                       class="form-check-label ml-2"
@@ -1293,6 +1292,7 @@ of Lorem Ipsum.
                                       name="SystemRadios"
                                       id="SystemRadios2"
                                       value="option2"
+                                      checked
                                     />
                                     <label
                                       class="form-check-label ml-2"
@@ -1322,7 +1322,6 @@ of Lorem Ipsum.
                                       name="removed"
                                       id="removed1"
                                       value="option1"
-                                      checked
                                     />
                                     <label
                                       class="form-check-label ml-2"
@@ -1338,6 +1337,7 @@ of Lorem Ipsum.
                                       name="removed"
                                       id="removed2"
                                       value="option2"
+                                      checked
                                     />
                                     <label
                                       class="form-check-label ml-2"
@@ -1367,7 +1367,6 @@ of Lorem Ipsum.
                                       name="done"
                                       id="done1"
                                       value="option1"
-                                      checked
                                     />
                                     <label
                                       class="form-check-label ml-2"
@@ -1383,6 +1382,7 @@ of Lorem Ipsum.
                                       name="done"
                                       id="done2"
                                       value="option2"
+                                      checked
                                     />
                                     <label
                                       class="form-check-label ml-2"
@@ -1485,6 +1485,7 @@ of Lorem Ipsum.
                             aria-expanded="true"
                             aria-controls="collapseOne"
                             href="#collapseOne"
+                            class="readonly"
                           >
                             <td>
                               <svg
@@ -1524,9 +1525,9 @@ of Lorem Ipsum.
                               </svg>
                             </td>
                             <td><a href="#802367816">802367816</a></td>
-                            <td>1910</td>
+                            <td>2010</td>
                             <td>
-                              1944
+                              2014
                             </td>
                             <td class="text-right">
                               <a
@@ -1555,6 +1556,7 @@ of Lorem Ipsum.
                             aria-expanded="false"
                             aria-controls="collapseTwo"
                             href="#collapseTwo"
+                            class="readonly"
                           >
                             <td>
                               <svg
@@ -1594,9 +1596,9 @@ of Lorem Ipsum.
                               </svg>
                             </td>
                             <td><a href="#802367817">802367817</a></td>
-                            <td>1910</td>
+                            <td>2015</td>
                             <td>
-                              1944
+                              2019
                             </td>
                             <td class="text-right" width="20">
                               <a
@@ -1629,9 +1631,54 @@ of Lorem Ipsum.
                       >
                         <div class="card m-lg-5">
                           <div class="card-body">
-                            <h3 class="font-weight-bold mb-5">
+                            <h3 class="font-weight-bold mb-3">
                               # 802367816
                             </h3>
+                            <div class="row mb-5 ml-2">
+                              <div
+                                class="d-flex align-items-center justify-content-flexstart"
+                              >
+                                <div class="form-group form-inline mb-0 mr-3">
+                                  <label
+                                    class="form-check-label font-weight-bold"
+                                    for="arkiveringsversion-navn-1"
+                                    >#</label
+                                  >
+                                  <input
+                                    id="arkiveringsversion-navn-1"
+                                    type="text"
+                                    class="form-control ml-2"
+                                    value="802367816"
+                                  />
+                                </div>
+                                <div class="form-group form-inline mb-0 mr-3">
+                                  <label
+                                    class="form-check-label font-weight-bold"
+                                    for="arkiveringsversion-fra-1"
+                                    >Fra</label
+                                  >
+                                  <input
+                                    id="arkiveringsversion-fra-1"
+                                    type="text"
+                                    class="form-control ml-2"
+                                    value="2010"
+                                  />
+                                </div>
+                                <div class="form-group form-inline mb-0">
+                                  <label
+                                    class="form-check-label font-weight-bold"
+                                    for="arkiveringsversion-til-1"
+                                    >Til</label
+                                  >
+                                  <input
+                                    id="arkiveringsversion-til-1"
+                                    type="text"
+                                    class="form-control ml-2"
+                                    value="2014"
+                                  />
+                                </div>
+                              </div>
+                            </div>
                             <div class="d-flex align-items-center mt-3 mb-3">
                               <svg
                                 class="mr-3"
