--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                           <div class="form-group mb-0">
                             <label for="type">Type</label>
                             <select class="form-control bg-light" id="status">
-                              <option>IT-Komponent</option>
+                              <option>IT-System</option>
                               <option>Papir</option>
                             </select>
                           </div>
@@ -573,8 +573,8 @@
                           <div class="form-group mb-0">
                             <label for="status">Status</label>
                             <select class="form-control bg-light" id="status">
-                              <option>Alle</option>
                               <option>Åben</option>
+                              <option>Alle</option>
                               <option>Lukket</option>
                             </select>
                           </div>
@@ -792,14 +792,7 @@
                 >Ansvarlig</label
               >
               <div class="col-sm-8">
-                <select class="form-control" id="kontaktperson">
-                  <option>LSKSK</option>
-                  <option>LAK</option>
-                  <option>LAKAJK</option>
-                  <option>PGA</option>
-                  <option>UDAL</option>
-                  <option>BOXODO</option>
-                </select>
+                <input type="text" class="form-control" id="name" value="Lars Larsen"/>
               </div>
             </div>
             <div class="form-group row">
@@ -816,7 +809,12 @@
                 >Kontaktoplysninger</label
               >
               <div class="col-sm-8">
-                <textarea class="form-control" id="type" rows="5"> </textarea>
+                <textarea class="form-control" id="type" rows="5">
+Lars Larsen
+Rigsarkivet
++45 69 39 59 59
+ll@sa.dk
+                </textarea>
                 <small class="form-text text-muted"
                   >Tilføj evt. Kontaktperson, email og telefonnr.</small
                 >
