--- a/magasinenhed.html
+++ b/magasinenhed.html
@@ -529,9 +529,7 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                                     <div class="col-sm-4 font-weight-semibold">
                                       Midlertidig placering
                                     </div>
-                                    <div class="col-sm-4">
-                                      21+Mez5+1+101+09+04
-                                    </div>
+                                    <div class="col-sm-4">04+RA+Alm+D</div>
                                     <div class="col-sm-4 text-right">
                                       <button
                                         class="btn btn-sm btn-outline-danger"
@@ -638,12 +636,12 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                                       </svg>
                                     </td>
                                     <td>
-                                      <a href="#a">Kgl. Grønlandske Hand, Ø</a>
+                                      <a href="#a">Frederiksberg Fogedret </a>
                                     </td>
-                                    <td>Brevkopier (1966-1985)</td>
+                                    <td>Register til Fogedsagliste</td>
                                     <td>
                                       <p class="m-0">
-                                        meget lang tekst kan være her
+                                        1993 1 - 1994 5778
                                       </p>
                                     </td>
                                     <td class="text-right">
@@ -677,7 +675,7 @@ Dette skal ikke konserveres efter aftale med Hans Jørgen på Slotsholmen</texta
                                       class="d-flex align-items-center justify-content-between"
                                     >
                                       <h5 class="mb-0">
-                                        Brevkopier (1966-1985)
+                                        Register til Fogedsagliste
                                       </h5>
                                       <button
                                         class="btn btn-primary float-right readonly edit"
