--- a/search/search-arbejdsopgave.html
+++ b/search/search-arbejdsopgave.html
@@ -196,7 +196,7 @@
           <div class="card bg-white pt-3 pr-4 pl-4 pb-5">
             <div class="card-body">
               <h4 class="mb-4 ml-1 mt-3">
-                <span class="font-weight-bold">33</span> resultater
+                <span class="font-weight-bold">6</span> resultater
               </h4>
               <div class="card">
                 <table
@@ -217,45 +217,45 @@
                       <td>
                         Min arbejdsopgave
                       </td>
-                      <td>Henriette Larsen</td>
+                      <td>Lars Larsen</td>
+                      <td>15.12.1972</td>
+                      <td></td>
+                    </tr>
+                    <tr class="clickable-row" data-href="../arbejdsopgave.html">
+                      <td>
+                        Indenrigsministeriet
+                      </td>
+                      <td>Henriette Olsen</td>
                       <td>15.12.1972</td>
                       <td>08.12.1971</td>
+                    </tr>
+                    <tr class="clickable-row" data-href="../arbejdsopgave.html">
+                      <td>
+                        Kirkesognet
+                      </td>
+                      <td>Jytte Larsen</td>
+                      <td>15.12.1972</td>
+                      <td></td>
                     </tr>
                     <tr class="clickable-row" data-href="../arbejdsopgave.html">
                       <td>
                         Ny opgave
                       </td>
-                      <td>Henriette Larsen</td>
+                      <td>Karina Jensen</td>
                       <td>15.12.1972</td>
                       <td>08.12.1971</td>
                     </tr>
                     <tr class="clickable-row" data-href="../arbejdsopgave.html">
                       <td>
-                        Ny opgave
+                        Test
                       </td>
                       <td>Henriette Larsen</td>
                       <td>15.12.1972</td>
-                      <td>08.12.1971</td>
+                      <td></td>
                     </tr>
                     <tr class="clickable-row" data-href="../arbejdsopgave.html">
                       <td>
-                        Ny opgave
-                      </td>
-                      <td>Henriette Larsen</td>
-                      <td>15.12.1972</td>
-                      <td>08.12.1971</td>
-                    </tr>
-                    <tr class="clickable-row" data-href="../arbejdsopgave.html">
-                      <td>
-                        Ny opgave
-                      </td>
-                      <td>Henriette Larsen</td>
-                      <td>15.12.1972</td>
-                      <td>08.12.1971</td>
-                    </tr>
-                    <tr class="clickable-row" data-href="../arbejdsopgave.html">
-                      <td>
-                        Ny opgave
+                        Sogn
                       </td>
                       <td>Henriette Larsen</td>
                       <td>15.12.1972</td>
