--- a/search/search-arkivskaber.html
+++ b/search/search-arkivskaber.html
@@ -192,7 +192,7 @@
           <div class="card bg-white pt-1 pr-4 pl-4 pb-3">
             <div class="card-body">
               <h4 class="mb-4 ml-1 mt-3">
-                <span class="font-weight-bold">33</span> resultater
+                <span class="font-weight-bold">3</span> resultater
               </h4>
               <div class="card">
                 <table
@@ -211,35 +211,27 @@
                   <tbody>
                     <tr class="clickable-row" data-href="../arkivskaber.html">
                       <td>
-                        FRB Politi
+                        
                       </td>
-                      <td>Frederiksberg Pol</td>
-                      <td>1972</td>
-                      <td>1988</td>
+                      <td>Frederiksberg Politi</td>
+                      <td>1919</td>
+                      <td>2006</td>
                     </tr>
                     <tr class="clickable-row" data-href="../arkivskaber.html">
                       <td>
-                        FRB Politi
+                        Frederiksberg Politi
                       </td>
-                      <td>Frederiksberg Pol</td>
-                      <td>1972</td>
-                      <td>1988</td>
+                      <td>Kriminalpolitiet</td>
+                      <td>1919</td>
+                      <td>2006</td>
                     </tr>
                     <tr class="clickable-row" data-href="../arkivskaber.html">
                       <td>
-                        FRB Politi
+                        Frederiksberg Politi
                       </td>
-                      <td>Frederiksberg Pol</td>
-                      <td>1972</td>
-                      <td>1988</td>
-                    </tr>
-                    <tr class="clickable-row" data-href="../arkivskaber.html">
-                      <td>
-                        FRB Politi
-                      </td>
-                      <td>Frederiksberg Pol</td>
-                      <td>1972</td>
-                      <td>1988</td>
+                      <td>Ordenspolitiet</td>
+                      <td>1919</td>
+                      <td>2006</td>
                     </tr>
                   </tbody>
                 </table>
