--- a/search/search-heuristiskenhed.html
+++ b/search/search-heuristiskenhed.html
@@ -175,7 +175,7 @@
           <div class="card bg-white pt-3 pr-4 pl-4 pb-5">
             <div class="card-body">
               <h4 class="mb-4 ml-1 mt-3">
-                <span class="font-weight-bold">33</span> resultater
+                <span class="font-weight-bold">5</span> resultater
               </h4>
               <div class="card">
                 <table
@@ -201,10 +201,10 @@
                       <td>
                         Indenrigsministeriet
                       </td>
-                      <td>Kredsaflytningssystem</td>
-                      <td>1972</td>
-                      <td>1988</td>
-                      <td>Komponent</td>
+                      <td>EDB-Journal</td>
+                      <td>1995</td>
+                      <td>2002</td>
+                      <td>IT-System</td>
                       <td>sh2001</td>
                     </tr>
                     <tr
@@ -214,11 +214,11 @@
                       <td>
                         Indenrigsministeriet
                       </td>
-                      <td>Kredsaflytningssystem</td>
+                      <td>Journalplan</td>
                       <td>1972</td>
                       <td>1988</td>
-                      <td>Komponent</td>
-                      <td>sh2001</td>
+                      <td>Papir</td>
+                      <td>sh2421</td>
                     </tr>
                     <tr
                       class="clickable-row"
@@ -227,11 +227,11 @@
                       <td>
                         Indenrigsministeriet
                       </td>
-                      <td>Kredsaflytningssystem</td>
+                      <td>Journalsager</td>
                       <td>1972</td>
                       <td>1988</td>
-                      <td>Komponent</td>
-                      <td>sh2001</td>
+                      <td>Papir</td>
+                      <td>sh3482</td>
                     </tr>
                     <tr
                       class="clickable-row"
@@ -240,11 +240,11 @@
                       <td>
                         Indenrigsministeriet
                       </td>
-                      <td>Kredsaflytningssystem</td>
+                      <td>Navneregister</td>
                       <td>1972</td>
                       <td>1988</td>
-                      <td>Komponent</td>
-                      <td>sh2001</td>
+                      <td>Papir</td>
+                      <td>sh40201</td>
                     </tr>
                     <tr
                       class="clickable-row"
@@ -253,11 +253,11 @@
                       <td>
                         Indenrigsministeriet
                       </td>
-                      <td>Kredsaflytningssystem</td>
+                      <td>Emneregister</td>
                       <td>1972</td>
                       <td>1988</td>
-                      <td>Komponent</td>
-                      <td>sh2001</td>
+                      <td>Papir</td>
+                      <td>sh25921</td>
                     </tr>
                   </tbody>
                 </table>
