Fixed all bugs from meeting on 21 aug

--- a/hif.html
+++ b/hif.html
@@ -386,7 +386,7 @@
                     <span>Tilknyt eksisterende DIF</span>
                   </button>
                 </div>
-                <form action="/heuristiskenhed.html#adresseringsnetvaerk">
+                <form action="/heuristiskenhed-papir.html">
                   <button class="btn btn-link">
                     Annuller
                   </button>
