--- a/heuristiskenhed-papir.html
+++ b/heuristiskenhed-papir.html
@@ -2214,7 +2214,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                                     Stregkode
                                                   </th>
                                                   <th scope="col">
-                                                    Løber
+                                                    Løbenr.
                                                   </th>
                                                   <th scope="col">
                                                     Type
@@ -2379,6 +2379,28 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                               />
                                             </svg>
                                             <span class="ml-2">Flyt</span>
+                                          </button>
+                                          <button
+                                            class="btn btn-outline-primary readonly ml-2"
+                                          >
+                                            <span
+                                              class="d-flex align-items-center"
+                                            >
+                                              <svg
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                width="12"
+                                                height="16"
+                                                viewBox="0 0 12 16"
+                                              >
+                                                <path
+                                                  fill-rule="evenodd"
+                                                  d="M11 10h1v3c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1V3c0-.55.45-1 1-1h3v1H1v10h10v-3zM6 2l2.25 2.25L5 7.5 6.5 9l3.25-3.25L12 8V2H6z"
+                                                />
+                                              </svg>
+                                              <span class="ml-2"
+                                                >Rediger i AIDA</span
+                                              >
+                                            </span>
                                           </button>
                                         </div>
                                       </div>
@@ -3198,7 +3220,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                                     <p
                                                       class="font-weight-semibold"
                                                     >
-                                                      Myndighedsnoter
+                                                      Indtastningsnote
                                                     </p>
 
                                                     <p class="readonly">
@@ -3373,7 +3395,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                                     Stregkode
                                                   </th>
                                                   <th scope="col">
-                                                    Løber
+                                                    Løbenr.
                                                   </th>
                                                   <th scope="col">
                                                     Type
@@ -3539,6 +3561,28 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                               />
                                             </svg>
                                             <span class="ml-2">Flyt</span>
+                                          </button>
+                                          <button
+                                            class="btn btn-outline-primary readonly ml-2"
+                                          >
+                                            <span
+                                              class="d-flex align-items-center"
+                                            >
+                                              <svg
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                width="12"
+                                                height="16"
+                                                viewBox="0 0 12 16"
+                                              >
+                                                <path
+                                                  fill-rule="evenodd"
+                                                  d="M11 10h1v3c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1V3c0-.55.45-1 1-1h3v1H1v10h10v-3zM6 2l2.25 2.25L5 7.5 6.5 9l3.25-3.25L12 8V2H6z"
+                                                />
+                                              </svg>
+                                              <span class="ml-2"
+                                                >Rediger i AIDA</span
+                                              >
+                                            </span>
                                           </button>
                                         </div>
                                       </div>
