--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
                           <div class="form-group mb-0">
                             <label for="type">Type</label>
                             <select class="form-control bg-light" id="status">
+                              <option>Alle</option>
                               <option>IT-System</option>
                               <option>Papir</option>
                             </select>
@@ -792,7 +793,12 @@
                 >Ansvarlig</label
               >
               <div class="col-sm-8">
-                <input type="text" class="form-control" id="name" value="Lars Larsen"/>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="name"
+                  value="Lars Larsen"
+                />
               </div>
             </div>
             <div class="form-group row">
